--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,9 +24,13 @@
   <link rel="stylesheet" href="/plugins/slick-carousel/slick/slick.css">
   <link rel="stylesheet" href="/plugins/slick-carousel/slick/slick-theme.css">
 </head>
-<body>
-  <section class="top-nav">
-
-  </section>
-</body>
+<header>
+  <h3 class="navTitle">Scholarship Auditions</h3>
+  <ul class="nav">
+      <li><a href="/home">Home</a></li>
+      <li><a href="/founder">Founder</a></li>
+      <li><a href="/intern-program">Intern Program</a></li>
+      <li><a href="/contact">Contact</a></li>
+  </ul>
+</header>
 </html>
