--- a/views/home.ejs
+++ b/views/home.ejs
@@ -131,14 +131,14 @@
         <div class="intern-title">
             <h1>Collegiate <br>Internship <br>Program</h1>
         </div>
-        <div class="intern intern1"></div>
-        <div class="intern intern2"></div>
-        <div class="intern intern3"></div>
-        <div class="intern intern4"></div>
-        <div class="intern intern5"></div>
-        <div class="intern intern6"></div>
-        <div class="intern intern7"></div>
-        <div class="intern intern8"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
+        <div class="intern"></div>
     </section>
 </main>
 
