--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,6 +13,7 @@
         <div class="links-wrapper">
             <h2>Pages</h2>
             <ul class="link-list">
+                <li><a href="/home">Home</a></li>
                 <li><a href="/founder">Founder Story</a></li>
                 <li><a href="/presenter">Collegiate Internship Program</a></li>
                 <li><a href="/bulletin-board">Contact</a></li>
@@ -21,16 +22,19 @@
         <div class="links-wrapper">
             <h2>Our Websites</h2>
             <ul class="link-list">
-                <li><a href="https://www.nationalscholasticmusiciansawards.com/home">National Scholastic Musician Awards</a></li>
-                <li><a href="https://www.mymusicfuture.com/">My Music Future</a></li>
                 <li><a href="https://www.accoladi.com/public">Accoladi</a></li>
+                <li><a href="https://www.nationalscholasticmusiciansawards.com/home">National Scholastic Junior Musician Awards</a></li>
+                <li><a href="https://www.mymusicfuture.com/">Director Letters</a></li>
+                <li><a href="https://www.mymusicfuture.com/">My Music Future</a></li>
             </ul>
         </div>
         <div class="links-wrapper">
-            <h2>Contact Us</h2>
+            <h2>More</h2>
             <ul class="link-list">
-                <li>Phone: +925 825 4700</li>
-                <li>Email: example@keth-studio.com</li>       
+                <li><a href="https://www.accoladi.com/public">Between Bands</a></li>
+                <li><a href="https://www.nationalscholasticmusiciansawards.com/home">Honor Ensemble Conductors</a></li>
+                <li><a href="https://www.nationalscholasticmusiciansawards.com/home">National Scholastic Musician Awards</a></li>
+                <li><a href="https://www.mymusicfuture.com/">Music City Bowl Band</a></li>
             </ul>
         </div>
         <div class="links-wrapper">
