--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,30 +1,41 @@
 <%- include('partials/header') -%>
 <script>
-    function animateCounter(targetCount, duration, elementId) {
-      const countElement = document.getElementById(elementId);
-      const startCount = parseInt(countElement.textContent);
-      const step = Math.ceil(targetCount / (duration * 300)); // Calculate increment per millisecond
+document.addEventListener("DOMContentLoaded", function() {
+    const counters = document.querySelectorAll(".counter span")
+    const container = document.querySelector(".stats-section")
 
-      let currentCount = startCount;
-      const interval = setInterval(function () {
-        currentCount += step;
-        countElement.textContent = currentCount.toLocaleString(); // Format with commas
+    let activated = false;
 
-        if (currentCount >= targetCount) {
-          clearInterval(interval);
-          countElement.textContent = targetCount.toLocaleString(); // Format the final count
+    window.addEventListener("scroll", () => {
+        if(
+            pageYOffset > container.offsetTop - container.offsetHeight - 200
+            && activated == false
+        ) {
+            counters.forEach(counter=>{
+                counter.innerText =0;
+
+                let count = 0;
+
+                function updateCount() {
+                    const target = parseInt(counter.dataset.count);
+
+                    if(count < target) {
+                        count+=100;
+                        counter.innerText = count;
+
+                        setTimeout(updateCount,10);
+                    } else {
+                        counter.innerText = target;
+                    }
+                }
+                updateCount();
+                activated = true;
+            });
         }
-      }, 1); // Update every millisecond
-    }
+    })
+})
 
-    // Example usage for each counter:
-    window.addEventListener('load', function () {
-      animateCounter(3240000, 5, 'count1'); // Count up to 3,240,000 in 5 seconds on page load
-      animateCounter(5480000, 5, 'count2'); // Count up to 5,480,000 in 5 seconds on page load
-      animateCounter(215714, 5, 'count3');  // Count up to 215,714 in 5 seconds on page load
-      animateCounter(37650, 5, 'count4');   // Count up to 37,650 in 5 seconds on page load
-    });
-  </script>
+</script>
 
 <main>
     <section class="hero-section">
@@ -74,28 +85,28 @@
             <div class="stat">
                 <img>
                 <div class="counter">
-                    <span id="count1">0</span>
+                    <span id="count1" data-count="3240000">0</span>
                 </div>
                 <h4>Middle & High School Performing Arts Students</h4>
             </div>
             <div class="stat">
                 <img>
                 <div class="counter">
-                    <span id="count2">0</span>
+                    <span id="count2" data-count="5480000">0</span>
                 </div>
                 <h4>Middle & High School Performing Arts Students' Parents</h4>
             </div>
             <div class="stat">
                 <img>
                 <div class="counter">
-                    <span id="count3">0</span>
+                    <span id="count3" data-count="215714">0</span>
                 </div>
                 <h4>Middle & High School Educators</h4>
             </div>
             <div class="stat">
                 <img>
                 <div class="counter">
-                    <span id="count4">0</span>
+                    <span id="count4" data-count="37650">0</span>
                 </div>
                 <h4>College, University, Conservatory Performing Arts Educators</h4>
             </div>
@@ -107,14 +118,14 @@
         <h3 style="margin: 1rem 1rem">Present Offerings</h3>
         <br>
         <div class="sites">
-            <a href="https://www.accoladi.com/"><div class="accoladi"></div></a>
-            <a href="https://www.nationalscholasticjuniormusiciansawards.com/home"><div class="nsjrma"></div></a>
-            <a href="https://www.directorletters.com/home"><div class="director-letters"></div></a>
-            <a href="https://www.mymusicfuture.com/"><div class="my-music-future"></div></a>
-            <a href="https://betweenbands.org/"><div class="between-bands"></div></a>
-            <a href="http://honorensembleconductors.com/"><div class="honor-ensemble-conductors"></div></a>
-            <a href="https://www.nationalscholasticmusiciansawards.com/home"><div class="nsma"></div></a>
-            <a href="https://www.musiccitybowlband.com/"><div class="music-city-bowl-band"></div></a>
+            <a href="https://www.accoladi.com/" target="_blank"><div class="accoladi"></div></a>
+            <a href="https://www.nationalscholasticjuniormusiciansawards.com/home" target="_blank"><div class="nsjrma"></div></a>
+            <a href="https://www.directorletters.com/home" target="_blank"><div class="director-letters"></div></a>
+            <a href="https://www.mymusicfuture.com/" target="_blank"><div class="my-music-future"></div></a>
+            <a href="https://betweenbands.org/" target="_blank"><div class="between-bands"></div></a>
+            <a href="http://honorensembleconductors.com/" target="_blank"><div class="honor-ensemble-conductors"></div></a>
+            <a href="https://www.nationalscholasticmusiciansawards.com/home" target="_blank"><div class="nsma"></div></a>
+            <a href="https://www.musiccitybowlband.com/" target="_blank"><div class="music-city-bowl-band"></div></a>
         </div>
     </section>
     <section class="portfolio-section">
