--- a/views/intern-program.ejs
+++ b/views/intern-program.ejs
@@ -4,7 +4,7 @@
         <div>
             <img src="../images/gradcap.png" alt="grad cap" class="grad-cap">
         </div>
-        <div style="border: #ecad34 solid 0.5rem; background-color: hsl(230, 36%, 14%); color: white; padding: 6px;">
+        <div style="border: #ecad34 solid 0.5rem; background-color: hsl(230, 36%, 14%); color: white; padding: 6px; width: 40%; text-align: center; letter-spacing: 4px;">
             <h1>Internship Program</h1>
         </div>
         <div class="grad-cap">
@@ -31,16 +31,15 @@
             leave us with invaluable reflections:</p>
     </section>
     <section class="internship-pictures" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-        <div class="intern-container" style="padding-left: 3rem; padding-right: 3rem;">
-            <div class="intern1" style="display: flex; flex-direction: row; gap: 2rem; margin-bottom: 1rem;">
+        <div class="intern-container" style="padding-left: 3rem; padding-right: 3rem; width: 100%;">
+            <div class="intern1" style="display: flex; flex-direction: row; gap: 2rem; margin-bottom: 3rem; align-items: center; justify-content: space-evenly;">
                 <div class="intern-image" style="color: white">
                     <img src="../images/intern1.png" alt="Anthony Cash" style="border: white solid 1rem; width: 40rem">
-                    <div>Anthony Cash, 2021 Summer Internship
-                        Holy Cross University</div>
+                    <div class="intern-name">Anthony Cash</br>2021 Summer Internship</br>Holy Cross University</div>
                 </div>
                 <div style="background-color: white; color: black; border: rgb(34, 133, 186) solid 0.5rem; font-style: italic; font-weight: bold; width: 80rem; height: 40rem;">
                     <div class="centered-content">
-                        <p style="font-size: 1.1em;">
+                        <span>"</span><p style="font-size: 1.1em;">
                             Going into this summer, I was unsure what the future held, and I
                             was anxious about getting an internship or job in a professional
                             industry. I applied and applied, but every opportunity fell through
@@ -65,12 +64,12 @@
                             ScholarshipAuditions.com, thousands of young American musicians
                             like me are empowered to realize their collegiate and professional
                             dreams. ScholarshipAuditions.com is truly a driven and excellent
-                            company, and it’s been an honor interning with them.
+                            company, and it’s been an honor interning with them.<span>"</span>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="intern2" style="display: flex; flex-direction: row; gap: 2rem; margin-top: 1rem;">
+            <div class="intern2" style="display: flex; flex-direction: row; gap: 2rem; margin-top: 1rem; align-items: center; justify-content: space-evenly;">
                 <div style="background-color: white; color: black; border: rgb(34, 133, 186) solid 0.5rem; font-style: italic; font-weight: bold; width: 80rem; height: 40rem; text-align: center;">
                     <div class="centered-content">
                         <p style="font-size: 1.1em;">
@@ -94,8 +93,7 @@
                 </div>
                 <div class="intern-image">
                     <img src="../images/intern3.png" alt="Bailey Wrenne" class="intern-pic" style="border: white solid 1rem; width: 40rem">
-                    <div class="text-white">Bailey Wrenne, 2021 Summer Internship
-                        Middle Tennessee State University</div>
+                    <div class="intern-name">Bailey Wrenne</br>2021 Summer Internship</br>Middle Tennessee State University</div>
                 </div>
             </div>
         </div>
@@ -133,7 +131,7 @@
     </section>
     <section class="internship-list">
         <div style="display: flex; justify-content: center; width: 100%; margin-bottom: 2rem;">
-            <h1 style="color: #ecad34; font-weight: bolder;">Internship Partnering Institutions</h1>
+            <div style="color: #ecad34; font-size: 4rem; font-weight: bolder;">Internship Partnering Institutions</div>
         </div>
             <li class="intern-list" style="list-style: none;">
                 <ul>American Intercontinental University – Chandler, Arizona</ul>
