--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,29 +8,57 @@ section{
     margin: 4rem;
 }
 
-/*     NAV      */
-header {
-    margin: 4rem 0;
+.navbar-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    transition: background-color 0.5s ease;
 }
+
 .navTitle {
-    text-align: center;
     font-family: garamond serif;
     font-size: 4rem;
-    margin-bottom: 3rem;
     color: #ecad34;
     font-weight: bold;
-}
-
-.nav {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+} 
+
+.navbar-container-scrolled {
+    background-color: #12151d;
+    opacity: 0.7;
 }
 
-.nav a{
-    color: #12151d;
-    font-weight: bold;
+.navbarList-scrolled a{
+    color: white;
 }
+
+.navbar-list a{
+    color: #12151d;
+}
+
+.navbar-list{
+    display: flex;
+    flex-direction: row;
+    font-size: 2rem;
+    column-gap: 4rem;
+    list-style: none;
+    transition: color 0.5s ease;
+}
+
+.navbarList-scrolled {
+    display: flex;
+    flex-direction: row;
+    font-size: 2rem;
+    column-gap: 4rem;
+    list-style: none;
+    transition: color 0.5s ease;
+}
+
 
 /*         FOOTER         */
 
@@ -110,12 +138,14 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     height: 60rem;
-    /* position: relative; */
+    position: relative;
     /* left: -50px; */
     top: 20%;
     width: 100vw;
     margin-left: 0;
+    margin-top:0;
 }
+
 
 .hero-text{
     width: 50%;
@@ -131,6 +161,33 @@ footer{
 
 .hero-logo{
     width: 50%;
+}
+
+.slider-arrows {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    font-size: 3em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.right-scroll:hover, .left-scroll:hover{
+    opacity: 70%;
+    border-style: solid;
+    border-color: black;
+    background-color: black;
+    border-width: 1rem;
+    border-radius: 5px;
+    transform: scale(1.3);
+    transition: 0.3s ease-in-out;
+    opacity: 70%;
+    cursor: pointer;
 }
 /*--------------About Section------------------*/
 
@@ -525,6 +582,16 @@ footer{
     align-items: center;
 }
 
+.intern-name {
+    font-size: 2rem; 
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.centered-content span {
+    font-size: 3rem;
+}
+
 .internship-list {
     background-image: url(../images/fireworks\ and\ school.png);
     background-size: cover !important;
@@ -533,6 +600,10 @@ footer{
     margin: 6rem 0rem;
     padding: 3rem 0rem;
     width: 100%;
+}
+
+.internship-list ul{
+    font-size: 2rem;
 }
 
 /*--------------FOUNDER PAGE------------------*/
