--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,16 +35,44 @@ document.addEventListener("DOMContentLoaded", function() {
     })
 })
 
+    const rightArrow = document.querySelector('.right-scroll')
+    const leftArrow = document.querySelector('.left-scroll')
+    const backgroundContainer = document.querySelector('.hero-section')
+
+    const backgroundImages = [
+        '../images/scholarshipauditions.com landing page 2.jpg',
+        '../images/scholarshipauditions.com landing page 3.jpg',
+        '../images/scholarshipauditions.com landing page 4.jpg',
+    ]
+
+    let currentImageIndex = 0;
+
+    function newImage(event) {
+        if(event.target === rightArrow) {
+        currentImageIndex = (currentImageIndex + 1) % backgroundImages.length;
+
+        } else if (event.target === leftArrow) {
+        currentImageIndex = (currentImageIndex - 1 + backgroundImages.length) % backgroundImages.length;
+        }
+        const imageUrl =   `url(${backgroundImages[currentImageIndex]})`
+        backgroundContainer.style.backgroundImage = imageUrl
+    }
+        rightArrow.addEventListener('click', newImage);
+        leftArrow.addEventListener('click', newImage);
 </script>
 
 <main>
     <section class="hero-section">
-            <div class="hero-text">
-                <h1>Dream Big With Us!</h1>
-            </div>
-            <div class="hero-logo">
-                <img>
-            </div>
+        <div class="slider-arrows">
+            <i class="left-scroll fa-solid fa-chevron-left text-white ml-5"></i>
+            <i class="right-scroll fa-solid fa-chevron-right text-white mr-5"></i>
+        </div>
+        <div class="hero-text">
+            <h1>Dream Big With Us!</h1>
+        </div>
+        <div class="hero-logo">
+            <img>
+        </div>
     </section>
     <section class="about-section">
         <h2>Scholarship Auditions brings multiple resources and opportunities to middle school, high school, and collegiate performing arts students, along with the institutions and associations that support these students.</h2>
