--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
 </head>
 
 
-<footer>
+<footer style="margin-top: 2rem;">
     <div class="footer-container">
         <div class="links-wrapper">
             <h2>Pages</h2>
