--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <script src="https://kit.fontawesome.com/7e4d14cf38.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <!-- bootstrap.min css -->
   <!-- Icofont Css -->
@@ -26,30 +25,23 @@
   <link rel="stylesheet" href="/plugins/slick-carousel/slick/slick-theme.css">
 </head>
 <body>
-  <div class="navbar-container sticky-top">
-    <div class="navTitle">Scholarship Auditions</div>
-    <ul class="navbar-list">
-      <li><a href="/home">Home</a></li>
-      <li><a href="/founder">About</a></li>
-      <li><a href="/intern-program">Intern Programs</a></li>
-      <li><a href="/contact">Contact</a></li>
-  </div>
-
-<script>
-  const navbar = document.querySelector('.navbar-container')
-  const navbarList = document.querySelector('.navbar-list')
-
-  window.addEventListener('scroll', ()=> {
-    if(window.scrollY > 50) {
-      navbar.classList.add('navbar-container-scrolled')
-      navbarList.classList.add('navbarList-scrolled')
-      navbarList.classList.remove('navbar-list')
-    } else if (window.scrollY <=50 ) {
-      navbar.classList.remove('navbar-container-scrolled')
-      navbarList.classList.remove('navbarList-scrolled')
-      navbarList.classList.add('navbar-list')
-    }
-  })
-</script>
+  <section class="top-nav" style="margin: 0 !important;">
+    <div class="nav-title">
+      <img src="/images/accoladi-logo-yellow.png" style="width: 5.7rem; margin: .5rem;">
+      <h2 class="text-white nav-text">Scholarship Auditions</h2>
+    </div>
+    <input id="menu-toggle" type="checkbox" />
+    <label class='menu-button-container' for="menu-toggle">
+    <div class='menu-button'></div>
+  </label>
+    <ul class="menu">
+      <li class="nav-list-item"><a href="/home">Home</a></li>
+      <li class="nav-list-item"><a href="/founder">Founder</a></li>
+      <li class="nav-list-item"><a href="/internship-program">Internship Program</a></li>
+      <li class="nav-list-item"><a href="/research-influencers">Research Influencers</a></li>
+      <li class="nav-list-item"><a href="/contact">Contact</a></li>
+      <li class="nav-list-item"><a href="/about">About</a></li>
+    </ul>
+  </section>
 </body>
 </html>
