--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,13 +33,13 @@
             <a href="/founder"><img src="/images/randallfounder.png"></a>
         </div>
         <div class="cta-right">
-            <h1>Scholarship Auditions: Visionary Pioneers</h1>
+            <h1 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px;">Scholarship Auditions: Visionary Pioneers</h1>
             <br>
             <p>Our online platform empowers scholastic performing arts students, guiding them through the intricate journey of application, audition, and scholarship attainment while seamlessly connecting them with collegiate music recruiters.</p>
             <br>
             <div class="cta-smallbox">
                 <div class="cta-smallbox-text">
-                    <h2>Valued</h2>
+                    <h2 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px;">Valued</h2>
                     <p>by Students and Parents</p>
                 </div>
                 <div class="cta-smallbox-img">
@@ -52,14 +52,14 @@
                     <img src="/images/icon22.png">
                 </div>
                 <div class="cta-smallbox-text">
-                    <h2>Trusted</h2>
+                    <h2 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px;">Trusted</h2>
                     <p>by Scholastic Music Educators</p>
                 </div>
             </div>
           
             <div class="cta-smallbox">
                 <div class="cta-smallbox-text">
-                    <h2>Esteemed</h2>
+                    <h2 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 8px;">Esteemed</h2>
                     <p>by Collegiate School of Music Recruiters</p>
                 </div>
                 <div class="cta-smallbox-img">
@@ -116,9 +116,10 @@
                 <div class="gallery1">
                     <img src="/images/accoladi.png" alt="Accoladi">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/accoladi.png"></a>
                     <p style="text-align: center;">An online matching platform connecting aspiring music majors and collegiate performers with school of music recruiters, serving as a comprehensive resource for the entire application, audition, scholarship and acceptance process.</p>
+                    <a href="https://www.accoladi.com/"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -126,10 +127,10 @@
                 <div class="gallery1">
                     <img src="/images/nsjrma.png" alt="NSMA Jr">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/nsjrma.png"></a>
-                    <p style="text-align: center;">An online awards system for middle school music students, mirroring honor ensemble audition requirements.
-                    </p>
+                    <p style="text-align: center;">An online awards system for middle school music students, mirroring honor ensemble audition requirements.</p>
+                    <a href="https://www.nationalscholasticjuniormusiciansawards.com/home"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -137,10 +138,11 @@
                 <div class="gallery1">
                     <img src="/images/director-letters.png" alt="Director Letters">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/director-letters.png"></a>
                     <p style="text-align: center;">A compilation of tailored topic-specific letters addressing the distinct communication requirements of music educators.
                     </p>
+                    <a href="http://www.directorletters.com/home"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
 
             </div>
@@ -149,9 +151,10 @@
                 <div class="gallery1">
                     <img src="/images/my-music-future.png" alt="My Music Future">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/my-music-future.png"></a>
                     <p style="text-align: center;">An aptitude assessment to assist students in determining their suitability for a music career and identifying their ideal music-related path.</p>
+                    <a href="https://www.mymusicfuture.com/"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -159,9 +162,10 @@
                 <div class="gallery1">
                     <img src="/images/between-bands.png" alt="Between Bands">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/between-bands.png"></a>
                     <p style="text-align: center;">An interactive edutainment website designed for marching band fans.</p>
+                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
 
@@ -169,10 +173,11 @@
                 <div class="gallery1">
                     <img src="/images/honor-ensemble-conductors.png" alt="Honor Ensemble Conductors">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/honor-ensemble-conductors.png"></a>
                     <p style="text-align: center;">The central hub linking elite conductors with global honor ensemble organizers.
                     </p>
+                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
 
@@ -180,10 +185,11 @@
                 <div class="gallery1">
                     <img src="/images/nsma.png" alt="NSMA">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/nsma.png"></a>
                     <p style="text-align: center;">A comprehensive online awards system for high school music students, closely mirroring collegiate audition standards.
                     </p>
+                    <a href="https://www.nationalscholasticmusiciansawards.com/home"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -191,9 +197,10 @@
                 <div class="gallery1">
                     <img src="/images/music-city-bowl-band.png" alt="Music City Bowl Band">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/music-city-bowl-band.png"></a>
                     <p style="text-align: center;">The online community for high school and college marching band members who will form the annual USA Festival Marching Band performing at the Music City Bowl in Nashville, Tennessee.</p>
+                    <a href="https://www.musiccitybowlband.com/"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
         </div>
@@ -207,39 +214,43 @@
                 <div class="gallery1">
                     <img src="/images/hollywood-sightreading.png" alt="Hollywood Sightreading">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/hollywood-sightreading.png"></a>
                     <p style="text-align: center;">A methodical platform empowering academic musicians to excel in precision and artistry in sightreading, while performing alongside renowned Hollywood movie session soundtrack orchestras.
                     </p>
+                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
             <div class="responsive1">
                 <div class="gallery1">
                     <img src="/images/between-choirs.png" alt="Between Choirs">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/between-choirs.png"></a>
                     <p style="text-align: center;">An engaging edutainment website tailored for show choir enthusiasts.
                     </p>
+                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
             <div class="responsive1">
                 <div class="gallery1">
                     <img src="/images/american-band-dad.png" alt="American Band Dad" width="600" height="400">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/american-band-dad.png"></a>
                     <p style="text-align: center;">The central hub for whimsical edutainment podcasts featuring fictional Wendell Bud McFarland, who humorously assumes the role of National President of the American Band Dad Association.
                     </p>
+                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
             <div class="responsive1">
                 <div class="gallery1">
                     <img src="/images/profet.png" alt="Profet" width="600" height="400">
                 </div>
-                <div class="overlay-content">
+                <div class="overlay-content" style="display: flex; flex-direction: column;">
                     <a target="_blank" href="/images/profet.png"></a>
                     <p style="text-align: center;">A precise assessment tool enabling high school music students to forecast their ideal collegiate music journey, aligning with the career aspirations, performance history, and musical proficiency as aspiring music majors.</p>
+                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
         </div>
